--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@emotion/react": "^11.11.4",
+    "@chakra-ui/cli": "^3.1.1",
+    "@chakra-ui/react": "^3.1.1",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "graphql": "^16.9.0",
     "lucide-react": "^0.400.0",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.24.0",
-    "transliteration": "^2.3.5"
+    "transliteration": "^2.3.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.8.4",
@@ -39,6 +43,7 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^5.1.1"
   }
 }
