--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.21",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.18.1",
     "graphql": "^16.9.0",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.4.3",
