--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.9.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
